masterclass/style.scss
---
---

@import "variables";

body {
  color: $darkBlue;
}

h2 {
  font-weight: 700;
  margin-bottom: 20px;
}

ul {
  text-align: left;
}

li {
  margin-top: 6px;
}

#wrapper-content section {
  padding-bottom: 30px;

  .container {
    border-top: 1px solid $lighterGray;
  }
}

.container {
  max-width: 960px;
}

.button-course {
  margin-right: 0;
  margin-top: 20px;
}

#page-info {
  .container {
    border-top: none;
  }
}

#page-subtitle {
  margin-bottom: 0;
}

#site-name-masterclass {
  font-size: $small;
  font-weight: 700;
  letter-spacing: 5.3px;
  padding-left: 4px;

  @include mobile {
    letter-spacing: 5.4px;
    padding-left: 4px;
  }
}

#course-intro {
  .container {
    border-top: none;
  }

  .button-course {
    margin-top: 0px;
  }
}

#course-transformation {
  .container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  h3 {
    font-weight: 400;
  }

  ul {
    list-style-type: none;
  }
}

#course-transformation-cta {
  @include mobile {
    span {
      display: none;
    }

    &:after {
      content: 'I want to become the future me!';
    }
  }

  @include mobileSmall {
    span {
      display: none;
    }

    &:after {
      content: 'I want to be the future me!';
    }
  }
}

#course-explanation {
  color: $gray;

  h3 {
    font-weight: 500;
  }
}

#course-about-us {
  .container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .avatar > img {
    background-size: cover;
    background-position: center;
    transform: scale(1.11);
  }
}

#course-wrapup {
  h1 {
    font-weight: 700;
  }

  .button-course {
    color: $white;
    background-color: $lighterBlue;
    border: 1px solid $lighterBlue;

    &:hover {
      background-color: $lightestBlue;
      border: 1px solid $lightestBlue;
    }
  }
}

// custom footer
#footer-services {
  display: none;
}

.footer-containers {
  justify-content: center;
}

.footer-container {
  align-items: center;
  text-align: center;
}

// Blinking cursor color

.blinking-cursor {
  @include blinkingCursorAnimation($darkBlue);
}

@include blinkingCursorKeyframes($darkBlue);

